--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <div class="description text">Sunny</div>
             <div class="icon" >
                 <img class="icons">
-               <!-- <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g><path fill="none" d="M0 0h24v24H0z"></path><path fill-rule="nonzero" d="M12 18a6 6 0 1 1 0-12 6 6 0 0 1 0 12zm0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM11 1h2v3h-2V1zm0 19h2v3h-2v-3zM3.515 4.929l1.414-1.414L7.05 5.636 5.636 7.05 3.515 4.93zM16.95 18.364l1.414-1.414 2.121 2.121-1.414 1.414-2.121-2.121zm2.121-14.85l1.414 1.415-2.121 2.121-1.414-1.414 2.121-2.121zM5.636 16.95l1.414 1.414-2.121 2.121-1.414-1.414 2.121-2.121zM23 11v2h-3v-2h3zM4 11v2H1v-2h3z"></path></g></svg> -->
             </div>
             <div class="more-description text">Todays high will be <span class="temp-highs">26</span>° with wind speeds of <span class="wind-speeds">4</span> mph</div>
         
@@ -36,33 +35,41 @@
         </div>
         <div class="future-forecast">
             <div class="first-day forecast">
-                <div class="date">Sun</div>
-                <div class="small-icons"></div>
-                <div class="forecast-temp"></div> 
+                <div class="first-date date">Sun</div>
+                <div class="small-icons">
+                    <img class="first-icon sm-icon">
+                </div>
+                <div class="first-date-temp forecast-temp"></div> 
             </div>
             <div class="second-day forecast">
-                <div class="date">Mon</div>
-                <div class="small-icons"></div>
-                <div class="forecast-temp"></div> 
+                <div class="second-date date">Mon</div>
+                <div class="small-icons">
+                    <img class="second-icon sm-icon">
+                </div>
+                <div class="second-date-temp forecast-temp"></div> 
             </div>
             <div class="third-day forecast">
-                <div class="date">Tue</div>
-                <div class="small-icons"></div>
-                <div class="forecast-temp"></div> 
+                <div class="third-date date">Tue</div>
+                <div class="small-icons">
+                    <img class="third-icon sm-icon">
+                </div>
+                <div class="third-date-temp forecast-temp"></div> 
             </div>
             <div class="fourth-day forecast">
-                <div class="date">Wed</div>
+                <div class="fourth-date date">Wed</div>
                 <div class="small-icons">
-                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.2" baseProfile="tiny" viewBox="0 0 24 24"  xmlns="http://www.w3.org/2000/svg"><g><path d="M17 18c-.552 0-1-.447-1-1s.448-1 1-1c1.654 0 3-1.346 3-3s-1.346-3-3-3c-.243 0-.5.041-.81.13l-1.075.307-.185-1.103c-.326-1.932-1.978-3.334-3.93-3.334-2.206 0-4 1.794-4 4 0 .272.027.545.082.811l.244 1.199-1.42-.016c-1.009.006-1.906.903-1.906 2.006s.897 2 2 2c.552 0 1 .447 1 1s-.448 1-1 1c-2.206 0-4-1.794-4-4 0-1.861 1.277-3.429 3.001-3.874l-.001-.126c0-3.309 2.691-6 6-6 2.587 0 4.824 1.638 5.65 4.015 2.939-.244 5.35 2.113 5.35 4.985 0 2.757-2.243 5-5 5zM10.5 18l1-3 1 3c.184.553-.114 1.149-.667 1.333-.552.185-1.149-.114-1.333-.666-.075-.226-.07-.458 0-.667zM13.5 20l1-3 1 3c.184.553-.114 1.149-.667 1.333-.552.185-1.149-.114-1.333-.666-.075-.226-.07-.458 0-.667zM7.5 20l1-3 1 3c.184.553-.114 1.149-.667 1.333-.552.185-1.149-.114-1.333-.666-.075-.226-.07-.458 0-.667z"></path></g></svg>
+                    <img class="fourth-icon sm-icon">
+
                 </div>
-                <div class="forecast-temp">32°</div> 
+                <div class="fourth-date-temp forecast-temp">32</div> 
             </div>
             <div class="fith-day forecast">
-                <div class="date">Thu</div>
+                <div class="fifth-date date">Thu</div>
                 <div class="small-icons">
-                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.2" baseProfile="tiny" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g><path d="M17 18c-.552 0-1-.447-1-1s.448-1 1-1c1.654 0 3-1.346 3-3s-1.346-3-3-3c-.243 0-.5.041-.81.13l-1.075.307-.185-1.103c-.326-1.932-1.978-3.334-3.93-3.334-2.206 0-4 1.794-4 4 0 .272.027.545.082.811l.244 1.199-1.42-.016c-1.009.006-1.906.903-1.906 2.006s.897 2 2 2c.552 0 1 .447 1 1s-.448 1-1 1c-2.206 0-4-1.794-4-4 0-1.861 1.277-3.429 3.001-3.874l-.001-.126c0-3.309 2.691-6 6-6 2.587 0 4.824 1.638 5.65 4.015 2.939-.244 5.35 2.113 5.35 4.985 0 2.757-2.243 5-5 5zM10.5 18l1-3 1 3c.184.553-.114 1.149-.667 1.333-.552.185-1.149-.114-1.333-.666-.075-.226-.07-.458 0-.667zM13.5 20l1-3 1 3c.184.553-.114 1.149-.667 1.333-.552.185-1.149-.114-1.333-.666-.075-.226-.07-.458 0-.667zM7.5 20l1-3 1 3c.184.553-.114 1.149-.667 1.333-.552.185-1.149-.114-1.333-.666-.075-.226-.07-.458 0-.667z"></path></g></svg>
+                    <img class="fifth-icon sm-icon">
+                    
                 </div>
-                <div class="forecast-temp">32°</div> 
+                <div class="fifth-date-temp forecast-temp">32</div> 
             </div>
         </div>
     </div>
