--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather app</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <script src="script.js"></script>
     <link rel="preload" href="/fonts/HelveticaNeue Regular.ttf" as="font" crossorigin="">
     <link rel="preload" href="/fonts/Shrikhand-Regular.ttf" as="font" crossorigin="">
